messaging_app/messaging_app/blue_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-blue
  labels:
    app: django-messaging-app
    version: blue
spec:
  replicas: 2
  selector:
    matchLabels:
      app: django-messaging-app
      version: blue
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  template:
    metadata:
      labels:
        app: django-messaging-app
        version: blue
    spec:
      containers:
        - name: django-blue-container
          image: owuor/messaging_app:2.0   # ✅ Updated version
          ports:
            - containerPort: 8000
