messaging_app/messaging_app/green_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-green
  labels:
    app: django-messaging-app
    version: green
spec:
  replicas: 2
  selector:
    matchLabels:
      app: django-messaging-app
      version: green
  template:
    metadata:
      labels:
        app: django-messaging-app
        version: green
    spec:
      containers:
        - name: django-green-container
          image: owuor/messaging_app:green   # 🟢 new version
          ports:
            - containerPort: 8000
