messaging_app/messaging_app/kubeservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-messaging-service
spec:
  type: ClusterIP
  selector:
    app: django-messaging-app
    version: blue   # 🔵 initially route traffic to blue
  ports:
    - port: 8000
      targetPort: 8000
